# rust-webServer

./: Cargo.toml  Dockerfile  docker-compose.yml  hello.html
migrations/2024-11-10-123509_create_rustaceans/: up.sql
migrations/2024-11-10-123547_create_crates/: up.sql
migrations/2025-01-28-062155_create_users/: up.sql
migrations/2025-01-28-062213_create_roles/: up.sql
migrations/2025-01-28-062236_create_users_roles/: up.sql
src/: commands.rs  lib.rs  main.rs  models.rs  repositories.rs
src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
tests/: crates.rs  rustaceans.rs
tests/common/: mod.rs
