[package]
name = "rust-webServer"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = {version = "0.5", features = ["json"]}
rocket_db_pools = { version = "0.1", features = ["diesel_postgres"]}
diesel = {version = "2.1", features = ["chrono"]}
diesel-async = { version = "0.3", features = ["postgres"] }
chrono = "0.4"
